@@ -1,8 +1,6 @@
 package exercise.controller.users;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -18,13 +16,13 @@ import exercise.Data;
 public class PostsController {
 
     @GetMapping("/users/{id}/posts")
-    public ResponseEntity<Object> posts(@PathVariable int id) {
-        List<Post> posts = Data.getPosts();
+    public List<Post> posts(@PathVariable int id) {
+        var posts = Data.getPosts();
         List<Post> userPosts = posts.stream()
-                .filter(p -> p.getUserId() == id)
-                .collect(Collectors.toList());
-            return ResponseEntity.ok(userPosts);
+                .filter(p -> p.getUserId() == id).toList();
+            return userPosts;
         }
+
 
 
     @PostMapping("/users/{id}/posts") // Создание страницы
